# notebooks

./: .gitignore  Copy_of_pwt10.ipynb  README.md  equalidex.json  requirements.txt
BastianHerre/: README.md
BerthaRohenkohl/: GDP_swarmplot.R  GDPpercapita_barchart.R  gdp-per-capita-vs-gdp-per-capita-adjusted-for-inflation-from-current-us.csv  gdp-per-capita-world-bank-constant-usd.csv  gdp-per-capita-worldbank.csv  hola.txt
DanielBachler/: README.md
DanielBachler/2024-04 LLM explorations/: .gitignore  01-extract-json.py  02-instructor.py  03-museum-images.py  04-test-csv-upload.py  05-passing-data.ipynb  05-passing-data.py  peers.json  pyproject.toml  slugs.json
DanielBachler/2024-04 LLM explorations/files/: life-expectancy.csv  owid-team.txt
HannahRitchie/: Air pollution by country.ipynb  Air pollution by fuel.ipynb  Air pollution emissions.ipynb  Global warming contributions (Global Carbon Project).ipynb  pm25-exposure-world-bank.csv
JuliaBroden/: Chess_Engines.csv
LarsYencken/: 2021-11-26 Charting tool comparison.ipynb  2022-01-24 Subtitles with whitespace.ipynb  2023-03-30 Grapher schema compliance.ipynb  requirements.txt
MallikaSnyder/: README.md
MichalisMoatsos/: .Rhistory  ExportPIP.R  ExportPIP_Regional.R  ExportTheData.R  ExportTheData2.R  First_look_at_main_data.Rmd  GetPCNDistro2.R  LogExportTheData.txt  MainDataRegional.csv  PIP_Dataset_Construction.Rmd  PIP_Export.Rmd  PIP_Issues.Rmd  PIP_Structure_and_how_the_API_works.Rmd  PartialDistributionsWithFills.txt  PartialDistros.txt
MojmirVinkler/: .gitignore  nbinit.py  (+1 more)
(+3419 files in other folders)
